# LeadersOfDigital-backend

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
modules/db/: db.py
modules/db/models/: models.py
modules/ml/: model.joblib  predictor_class.py  training.py  Данные для аналитики2.txt
modules/utils/: models.py  singleton.py  utils.py
modules/utils/ml/: BaseClassifier.py  __init__.py
