[tool.poetry]
name = "leadersofdigital-backend"
version = "0.1.0"
description = ""
authors = ["Nikolas <timofeevnik41@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
motor = "^2.5.1"
loguru = "^0.5.3"
uvicorn = "^0.15.0"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
